@@ -1,3 +1,11 @@
+2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b37
+	
+	* During upgrade, item owner for all items will default to album owner, 
+	  instead of "nobody"
+
+	* Bug fix in the owner code.  If owner is unknown, it now will not be 
+	  printed as NOBODY.
+
 2003-06-28  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b36
 
 	* Fixed bugs in edit_appearance and photo_owner where we were using
